<resources>
    <string name="app_name">Moki</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bo_qua">Bỏ qua</string>
    <string name="so_dien_thoai">Số điện thoại</string>
    <string name="dang_nhap">Đăng nhập</string>
    <string name="mat_khau">Mật khẩu</string>
    <string name="dang_ky">Đăng ký</string>
    <string name="mua">Mua</string>
    <string name="xem_them">Xem thêm</string>
    <string name="thu_lai">Thu lại</string>
    <string name="khoi_luong">Khối lượng</string>
    <string name="kich_thuoc">Kích thước</string>
    <string name="noi_ban">  Nơi bán</string>
    <string name="binh_luan_dau_tien">Trờ thành người bình luận đầu tiên</string>
    <string name="san_pham">Sản phẩm</string>
    <string name="dang_theo_doi">Đang theo dõi</string>
    <string name="nguoi_theo_doi">Người theo dõi</string>

    <string name="quen_mat_khau"><u>Quên mật khẩu?</u></string>
    <string name="xem_tat_ca_danh_gia"><u><p><font color="red">Xem tất cả đánh giá</font></p></u></string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="chao_mung">Chào mừng bạn đến với MOKI</string>
    <string name="trang_chu">Trang chủ</string>
    <string name="tin_tuc">Tin tức</string>
    <string name="danh_sach_yeu_thich">Danh sách yêu thích</string>
    <string name="danh_sach_ban">Danh sách bán</string>
    <string name="danh_sach_mua">Danh sách mua</string>
    <string name="tu_thien">Từ thiện</string>
    <string name="thiet_lap">Thiết lập</string>
    <string name="trung_tam_ho_tro">Trung tâm hỗ trợ</string>
    <string name="gioi_thieu_moki">Giới thiệu MOKI</string>
    <string name="sap_xep_do"><p><font color="red">Sắp xếp</font></p></string>
    <string name="loc_do"><p><font color="red">Lọc</font></p></string>
    <string name="xung_quanh_do"><p><font color="red">Xung quanh</font></p></string>
    <string name="sap_xep">Sắp xếp</string>
    <string name="xung_quanh">Xung quanh</string>
    <string name="loc">Lọc</string>
    <string name="huy">Hủy</string>
    <string name="ap_dung">Áp dụng</string>
    <string name="xoa_het">Xóa hết</string>
    <string name="danh_muc">Danh mục</string>
    <string name="tat_ca">Tất cả</string>
    <string name="trang_thai">Trạng thái</string>
    <string name="gia">Giá</string>
    <string name="tim_kiem">Tìm kiếm</string>
    <string name="nhan_hieu">Nhãn hiệu</string>

    <string-array name="arrTinhThanh">
        <item>An Giang</item>
        <item>Bà Rịa - Vũng Tàu</item>
        <item>Bắc Giang</item>
        <item>Bắc Kạn</item>
        <item>Bạc Liêu</item>
        <item>Bắc Ninh</item>
        <item>Bến Tre</item>
        <item>Bình Định</item>
        <item>Bình Dương</item>
        <item>Bình Phước</item>
        <item>Bình Thuận</item>
        <item>Cà Mau</item>
        <item>Cao Bằng</item>
        <item>Đắk Lắk</item>
        <item>Đắk Nông</item>
        <item>Điện Biên</item>
        <item>Đồng Nai</item>
        <item>Đồng Tháp</item>
        <item>Gia Lai</item>
        <item>Hà Giang</item>
        <item>Hà Nam</item>
        <item>Hà Tĩnh</item>
        <item>Hải Dương</item>
        <item>Hậu Giang</item>
        <item>Hòa Bình</item>
        <item>Hưng Yên</item>
        <item>Khánh Hòa</item>
        <item>Kiên Giang</item>
        <item>Kon Tum</item>
        <item>Lai Châu</item>
        <item>Lâm Đồng</item>
        <item>Lạng Sơn</item>
        <item>Lào Cai</item>
        <item>Long An</item>
        <item>Nam Định</item>
        <item>Nghệ An</item>
        <item>Ninh Bình</item>
        <item>Ninh Thuận</item>
        <item>Phú Thọ</item>
        <item>Quảng Bình</item>
        <item>Quảng Nam</item>
        <item>Quảng Ngãi</item>
        <item>Quảng Ninh</item>
        <item>Quảng Trị</item>
        <item>Sóc Trăng</item>
        <item>Sơn La</item>
        <item>Tây Ninh</item>
        <item>Thái Bình</item>
        <item>Thái Nguyên</item>
        <item>Thanh Hóa</item>
        <item>Thừa Thiên Huế</item>
        <item>Tiền Giang</item>
        <item>Trà Vinh</item>
        <item>Tuyên Quang</item>
        <item>Vĩnh Long</item>
        <item>Vĩnh Phúc</item>
        <item>Yên Bái</item>
        <item>Phú Yên</item>
        <item>Cần Thơ</item>
        <item>Đà Nẵng</item>
        <item>Hải Phòng</item>
        <item>Hà Nội</item>
        <item>TP HCM</item>

    </string-array>


    <string-array name="arrSapXep">
        <item>Giá từ cao xuống thâp</item>
        <item>Giá từ thấp lên cao</item>
        <item>Sản phẩm mới nhất</item>
        <item>Giảm giá nhiều nhất</item>
        <item>Khuyến mại nhiều nhất</item>
        <item>Yêu thích nhất</item>
        <item>Bình luận nhiều nhất</item>
    </string-array>


    <string-array name="arrTabs">
        <item>Tất cả</item>
        <item>Miễn phí</item>
        <item>Bé ăn</item>
        <item>Bé mặc</item>
        <item>Bé ngủ</item>
        <item>Bé tắm</item>
        <item>Bé vệ sinh</item>
        <item>Bé khỏe - an toàn</item>
        <item>Bé đi ra ngoài</item>
        <item>Bé chơi mà học</item>
        <item>Dành cho mẹ</item>
        <item>Đồ dùng gia đình</item>
        <item>Sản phẩm khác</item>

    </string-array>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="txt_test">
         "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"
    </string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

</resources>
