<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/colorWhite"
    android:layout_height="match_parent"
    android:weightSum="10">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sap_xep_do"
        android:textSize="26dp"
        android:layout_marginLeft="@dimen/size_5dp"
        android:textColor="@color/maudo"/>
    <TextView
        android:id="@+id/txt_1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_2dp"
        android:background="@color/colorGrayLight" />
    <ListView
        android:id="@+id/list_sap_xep"
        android:layout_width="match_parent"
        android:layout_centerInParent="true"
        android:layout_below="@id/txt_1"
        android:layout_height="0dp"
        android:layout_weight="8.5">
    </ListView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_1dp"
        android:layout_below="@id/list_sap_xep"
        android:background="@color/colorGrayLight"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:weightSum="10"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/list_sap_xep"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_huy_sap_xep"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"

            android:layout_weight="5"
            android:text="@string/huy"/>

        <Button
            android:id="@+id/btn_ap_dung_sap_xep"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"
            android:fontFamily=""

            android:layout_weight="5"
            android:text="@string/ap_dung"/>
    </LinearLayout>

</LinearLayout>