<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context="ambe.com.vn.moki.activities.SearchActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_search_activity"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_40dp"
        android:background="@color/colorWhite"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="10">

            <ImageView
                android:id="@+id/img_back_activity_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|left"
                android:src="@drawable/icon_back_small" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="9"
                android:gravity="center"
                android:text="@string/tim_kiem"
                android:textColor="@color/colorRed"
                android:textSize="@dimen/size_20sp" />

            <ImageView
                android:id="@+id/img_bin"
                android:layout_width="0dp"
                android:layout_height="@dimen/size_30dp"
                android:layout_gravity="center|right"
                android:layout_marginRight="@dimen/size_10dp"
                android:layout_weight="1"
                android:src="@drawable/bin" />

        </LinearLayout>

    </android.support.v7.widget.Toolbar>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_1dp"
        android:background="@color/colorRed" />

    <LinearLayout
        android:id="@+id/lnl_danh_muc_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/size_10dp"
        android:layout_marginLeft="@dimen/size_10dp"
        android:layout_marginTop="@dimen/size_10dp"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/size_40dp"
            android:layout_weight="8"
            android:background="@drawable/bg_edit_txt"
            android:gravity="center|start"
            android:hint="   Tìm kiếm" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:src="@drawable/microphonevoice" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_1dp"
        android:background="@color/colorGrayLight" />

    <LinearLayout
        android:id="@+id/lnl_nhan_hieu_search"

        android:layout_width="match_parent"
        android:layout_height="@dimen/size_40dp"
        android:layout_marginLeft="@dimen/size_10dp"
        android:orientation="horizontal"
        android:weightSum="10">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="@dimen/size_16dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:src="@drawable/list" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:gravity="center_vertical"
            android:text="@string/danh_muc" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical|right"
            android:text="@string/tat_ca"
            android:textColor="@color/colorRed" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="@dimen/size_16dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/icon_nextarrow_normal" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_1dp"
        android:background="@color/colorGrayLight" />

    <LinearLayout
        android:id="@+id/lnl_kich_co_search"

        android:layout_width="match_parent"
        android:layout_height="@dimen/size_40dp"
        android:layout_marginLeft="@dimen/size_10dp"
        android:orientation="horizontal"
        android:weightSum="10">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="@dimen/size_24dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:src="@drawable/brand_icon" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:gravity="center_vertical"
            android:text="@string/nhan_hieu" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical|right"
            android:text="@string/tat_ca"
            android:textColor="@color/colorRed" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="@dimen/size_16dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/icon_nextarrow_normal" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_1dp"
        android:background="@color/colorGrayLight" />

    <LinearLayout
        android:id="@+id/lnl_gia_search"

        android:layout_width="match_parent"
        android:layout_height="@dimen/size_40dp"
        android:layout_marginLeft="@dimen/size_10dp"
        android:orientation="horizontal"
        android:weightSum="10">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="@dimen/size_24dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:src="@drawable/size_icon" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:gravity="center_vertical"
            android:text="Kích cỡ" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical|right"
            android:text="@string/tat_ca"
            android:textColor="@color/colorRed" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="@dimen/size_16dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/icon_nextarrow_normal" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_1dp"
        android:background="@color/colorGrayLight" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_40dp"
        android:layout_marginLeft="@dimen/size_10dp"
        android:orientation="horizontal"
        android:weightSum="10">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:src="@drawable/product_price" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:gravity="center_vertical"
            android:text="@string/gia" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/size_30dp"
            android:layout_marginRight="@dimen/size_10dp"
            android:layout_weight="4"
            android:background="@drawable/bg_edit_txt"
            android:gravity="center_vertical" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_1dp"
        android:background="@color/colorGrayLight" />

    <LinearLayout
        android:id="@+id/lnl_trang_thai_search"

        android:layout_width="match_parent"
        android:layout_height="@dimen/size_40dp"
        android:layout_marginLeft="@dimen/size_10dp"
        android:orientation="horizontal"
        android:weightSum="10">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="@dimen/size_24dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:src="@drawable/status_product_icon" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:gravity="center_vertical"
            android:text="@string/trang_thai" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical|right"
            android:text="@string/tat_ca"
            android:textColor="@color/colorRed" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="@dimen/size_16dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/icon_nextarrow_normal" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_1dp"
        android:background="@color/colorGrayLight" />

    <Button
        android:id="@+id/btn_tim_kiem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_20dp"
        android:background="@drawable/bg_tim_kiem"
        android:text="@string/tim_kiem"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite" />

    <TextView
        android:id="@+id/txt_huong_dan_tim_kiem"
        android:layout_width="200dp"
        android:layout_height="@dimen/size_40dp"
        android:layout_gravity="right"
        android:layout_marginRight="@dimen/size_20dp"
        android:background="@drawable/bg_dang_ky"
        android:gravity="center"
        android:text="@string/huong_dan_tim_kiem"
        android:textAllCaps="false"
        android:textColor="@color/colorRed" />


</LinearLayout>
